--- a/gunDeaths.html
+++ b/gunDeaths.html
@@ -191,72 +191,66 @@ title: "Gun Deaths, State by State"
 #Gun Deaths in the US 2000-2010
 
 
-Between 2000 and 2010, 335,609 people died from gun related deaths in the United States. Researchers looked at data from the Web-based Injury Statistics Query and Reporting System to identify the trends in race (Caucasian, African-American or other), ethnicity (Hispanic or non-Hispanic) and intent (homicide, suicide, undetermined or unintentional). Here is what they found.
+Between 2000 and 2010, 335,609 people died from gun related deaths in the United States. Researchers identified trends in race, ethnicity, and intent behind those statistics. Here is what they found.
 
 
-#Gun Death Rates Overall, by State
+#Gun Deaths, by State
 
 ![National Avg Graph](img/nationaloverall.png)
 
-Nationally during this 11 year period, the risk of death by firearm was 10.21 per 100,000 people meaning approximately 10 people out of every 100,000 in the US died by a gun.
+10 (key number) people out of every 100,000 in the US died by a gun.
 
-#States with Lowest and Highest Gun Death Rates
+#Highs and Lows
 
 ![Lowest Highest](img/highlow.png)
 
-Deaths varied by state with the lowest number of deaths being 3.02 per 100,000 in Hawaii and the highest number of deaths being 18.62 per 100,000 in Louisiana. 
+Hawaii had the lowest number of deaths at 3 (key number) per 100,000. Louisana had the highest number of deaths at 19 (key number) per 100,000. 
 
 
-#States with Gun Death Risk higher than the National Risk
+#Comparing to National Average
 
 ![Higher than Average](img/aboveaverage.png)
 
-Overall 30 states and Washington DC had rates higher than the national average.
+30 (key number) states and Washington DC had higher rates than the national average.
 
 
-#States with little change over the 11 year period
 
-![Little Change](img/notmuchchange.png)
-
-41 of the states didn’t change much from 2000-2010. 
-
-
-#Gun Death Rates for African Americans, by State
+#Gun Deaths among African Americans
 
 ![African Americans](img/blacks.png)
 
-The national average rate of death by gun for African Americans was 18.51 per 100,000 people and for Caucasians was 9.05 per 100,000. (Nationally, African Americans were almost twice more likely to die by a gun than Caucasians.)
+African Americans were almost twice as likely to die by gun than non-Hispanic Whites. (19 vs 9 per 100,000) (key numbers)
 
 
-#Gun Death Rates for Hispanics, by State
+#Gun Deaths among Hispanics
 
 ![Hispanics](img/hispanics.png)
 
-The national average rate of death by gun for Hispanics was 7.13 per 100,000 people and for non-Hispanics was 10.13 per 100,000. (Nationally, non-Hispanics were more likely to die by a gun than Hispanics.)
+Hispanics were less likely to die by gun than non-Hispanic Whites (7 vs 10 per 100,000) (key numbers)
 
-# States with Gun Death Increases
+# Increases in Gun Deaths
 
 ![Increases](img/increases.png)
 
-Two states saw their rate of gun deaths increase over this 11 year period, Florida and Massachusetts. In those states, the deaths of Caucasians and Non-Hispanics were responsible for the increase.
+Florida and Massachusetts had increases in gun deaths between 2000-2010. 
 
-# States with Gun Death Decreases
+#Decreases in Gun Deaths
 
 ![Decreases](img/decreases.png)
 
-Seven states and Washington DC saw their rate of gun deaths decrease over this 11 year period, California, North Carolina, Arizona, Nevada, New York, Illinois, and Maryland. In those states, fewer deaths of Hispanics and African Americans drove the fall.
+Seven states and Washington DC had decreases in gun deaths between 2000-2010.
 
-# Rates of Homicides, by State
+#Homicides
 
 ![Homicides](img/homicides.png)
 
-Nationally the rates of firearm related deaths classified as homicides (4.1 per 100,000) remained constant during this time but varied between states.
+The rate of homicide remained steady at 4 per 100,000 over this time period.
 
-# Rates of Suicides, by State
+# Suicides
 
 ![Suicides](img/suicides.png)
 
-Nationally the rates of firearm related deaths classified as suicides (5.8 per 100,000) remained constant during this time but varied between states.
+The rate of suicides remained steady at 6 per 100,000 over this time period.
 
 # Conclusions
 
@@ -266,19 +260,13 @@ Gun related deaths were twice as high in African Americans than Caucasians but d
 
 Efforts to identify state-specific best practices can contribute to changes in national firearm fatality rates that remain high. This calls for specific studies to identify the drivers of the state-specific trends followed by introducing tailored programmes that target specific racial and ethnic groups in specific states.
 
-# Strength and Limitations of this Study
+# Citation
 
-▪ This study uses the best available data of firearm mortality in the USA.
+For more information State Specific, Racial and Ethnic Heterogeneity in Trends of Firearm-related fatality rates in the USA from 2000-2010. link to http://bmjopen.bmj.com/content/4/9/e005628.full
 
-▪ It highlights the state-specific variations in firearm fatalities including fluctuation according to race, ethnicity and intent which was previously hidden behind a national gun mortality rate that stayed stable during this 11 year period.
-
-▪ This is the first report that documents firearm fatality trends by ethnicity.
-
-▪ Understanding the drivers that result in ethnic, racial and intent trends can help states identify programs to reduce death and injury due to firearms.
-
-▪ It is possible that not all gun deaths have been reported, which impacts the results.
-
-▪ The variation in firearm mortality may be a feature of cities and counties with varying crime rates, and we do not address the variation existing at such level.
+Kalesan B, Vasan S, Mobily ME, et al. State specific, racial and ethnic heterogeneity in trends of
+firearm-related fatality rates in the USA from 2000 to 2010. BMJ Open 2014;4:e005628. doi:10.1136/bmjopen-2014-
+005628
 
 
 </script></body></html>
