--- a/mexPara.html
+++ b/mexPara.html
@@ -189,19 +189,21 @@
 -baseurl: "http://a.tiles.mapbox.com/v3/zingbot.d2094e7e/{z}/{x}/{y}.png"
 ```
 
-#The Mexican Paradox
+#The Mexican Infant Mortality Paradox
 ```
 - center: [32.0, -101.5]
 - zoom: 4
 ```
 
-The Mexican Paradox is a phenomenon that can be seen by comparing health outcomes among different groups in the population. This study looks at women who gave birth in Michigan between 1989 and 2006 and compares non-Hispanic whites, US born Mexicans and foreign born Mexicans.
+Despite being poor on average, babies born to Mexican mothers are less likely to die in their first year of life than those to non-hispanic mothers. This paradox has long puzzled population health scientists. But htat all migh be changing. The Mexican Paradox is a phenomenon that can be seen by comparing health outcomes among different groups in the population. This study looks at women who gave birth in Michigan between 1989 and 2006 and compares non-Hispanic whites, US born Mexicans and foreign born Mexicans.
 
-#Births in Michigan, 1989-2006
+#Births in Michigan, 1989-1997
 ```
 - center: [44.48, -84.81]
 - zoom: 5
 ```
+During this 8-year period, Meixcan-born mothers in the us hda lower rates of infant mortality than US-born Mexican mothers and non-hispanic White mothers. This means that their babies were less likely to die before the age of one. 
+
 The study found that foreign born Mexicans in the US have lower rates of infant mortality than non-Hispanic whites. This means that Mexican mothers in the US, particularly those born in Mexico, have fewer babies die than non-Hispanic mothers.
 ![Mexican Paradox Graph](img/mexParaChart.png)
 
@@ -222,20 +224,14 @@ This is surprising because Hispanic groups in the US usually have higher poverty
 There are 2 principal explanations for why this might be.
 
 
-#Explanation 1: Cultural Norms
+#Two possible explanations
 ```
 - center: [26.72, -106.66]
 - zoom: 5```
 
-
-
-The first possibility is different social and cultural norms among Mexicans relative to non-Hispanic whites. These include the norm of spending more time together, and feeling obligated among family and friends to do so, meaning that people are more likely to offer help before it is asked for. 
+The first explanation is different social and cultural norms among Mexicans relative to non-Hispanic whites. These include the norm of spending more time together, and feeling obligated among family and friends to do so, meaning that people are more likely to offer help before it is asked for. Additionally, things like diet, exercise and childcare norms may neutralize the negative effects of poverty. This theory is supported by the observation that the paradox is stronger in immigrants who are more likely to adhere to these norms and who have spent a shorter time in the US.
 
 ![Mexican Paradox Graph](img/mexParaOne.jpg)
-
-
-Additionally, things like diet, exercise and childcare norms may neutralize the negative effects of poverty. This theory is supported by the observation that the paradox is stronger in immigrants who are more likely to adhere to these norms and who have spent a shorter time in the US.
-
 
 
 #Explanation 2: Healthier Immigrants
@@ -244,16 +240,21 @@ Additionally, things like diet, exercise and childcare norms may neutralize the 
 - zoom: 5
 ```
 
-The second explanation is that the difference is the result of the people who choose to immigrate to and stay in the US, that these people are simply healthier. It is supported by data showing that other ethnic groups who are not Hispanic also seem to benefit from the Mexican Paradox.
+The second explanation is that the difference is that people who coose to immigrate to the us and stay in the us may simply be healthier. This expalation is supported by data showing that other ethnic groups who are not Hispanic also seem to benefit from the Mexican Paradox.
 
 
-#Looking at Trends
+#trends tell a different story
 
-Typically the Mexican Paradox has been studied looking at single points in time. This study looks at the trend over two decades between 1989-2006. It found that the Mexican Paradox was clearly present between 1989-1991. But then there was an upward trend in infant mortality for babies born to foreign born Mexican mothers so in the later periods, Mexican mothers no longer had an advantage.
+Typically epidemiologist have studied perioods of time. Here, researchers looked ar a longer period: 1989-2006.  They found that over time the mexican infrant mortality paradox began to resolve. And infants born to mexican born mothers no longer had an advantage.  
+
 ![Mexican Paradox Graph](img/mexParaChartDip.png)
 
 #Theories
 
-The authors speculate that changing sociocultural norms among Mexican mothers or changes in the health of those immigrating  may explain these observations.
+Why? The researchers speculat that this may involve changes in sociocultural norms or changes in the type of people that are immigrating.
+
+#Citation
+
+(Citation goes here)
 
 </script></body></html>
