--- a/gunDeaths.html
+++ b/gunDeaths.html
@@ -260,13 +260,11 @@ Gun related deaths were twice as high in African Americans than Caucasians but d
 
 Efforts to identify state-specific best practices can contribute to changes in national firearm fatality rates that remain high. This calls for specific studies to identify the drivers of the state-specific trends followed by introducing tailored programmes that target specific racial and ethnic groups in specific states.
 
-# Citation
-
-For more information State Specific, Racial and Ethnic Heterogeneity in Trends of Firearm-related fatality rates in the USA from 2000-2010. link to http://bmjopen.bmj.com/content/4/9/e005628.full
+# For More Information
 
 Kalesan B, Vasan S, Mobily ME, et al. State specific, racial and ethnic heterogeneity in trends of
 firearm-related fatality rates in the USA from 2000 to 2010. BMJ Open 2014;4:e005628. doi:10.1136/bmjopen-2014-
 005628
-
+"http://bmjopen.bmj.com/content/4/9/e005628.full"
 
 </script></body></html>
