more text changes

--- a/mexPara.html
+++ b/mexPara.html
@@ -195,16 +195,16 @@
 - zoom: 4
 ```
 
-Despite being poor on average, babies born to Mexican mothers are less likely to die in their first year of life than those to non-hispanic mothers. This paradox has long puzzled population health scientists. But htat all migh be changing. The Mexican Paradox is a phenomenon that can be seen by comparing health outcomes among different groups in the population. This study looks at women who gave birth in Michigan between 1989 and 2006 and compares non-Hispanic whites, US born Mexicans and foreign born Mexicans.
+Despite being poor on average, babies born to Mexican mothers are less likely to die in their first year of life than those to non-hispanic mothers. This paradox has long puzzled population health scientists. But that all migh be changing. 
 
 #Births in Michigan, 1989-1997
 ```
 - center: [44.48, -84.81]
 - zoom: 5
 ```
-During this 8-year period, Meixcan-born mothers in the us hda lower rates of infant mortality than US-born Mexican mothers and non-hispanic White mothers. This means that their babies were less likely to die before the age of one. 
+During this 8-year period, Meixcan-born mothers in the US had lower rates of infant mortality than US-born Mexican mothers and non-hispanic White mothers. This means that their babies were less likely to die before the age of one. 
 
-The study found that foreign born Mexicans in the US have lower rates of infant mortality than non-Hispanic whites. This means that Mexican mothers in the US, particularly those born in Mexico, have fewer babies die than non-Hispanic mothers.
+The study found that foreign born Mexicans in the US have lower rates of infant mortality than non-Hispanic whites. This means that Mexican mothers in the US, particularly those born in Mexico,have fewer babies die than non-Hispanic mothers.
 ![Mexican Paradox Graph](img/mexParaChart.png)
 
 #Against Intuition
@@ -243,15 +243,15 @@ The first explanation is different social and cultural norms among Mexicans rela
 The second explanation is that the difference is that people who coose to immigrate to the us and stay in the us may simply be healthier. This expalation is supported by data showing that other ethnic groups who are not Hispanic also seem to benefit from the Mexican Paradox.
 
 
-#trends tell a different story
+#Trends tell a different story
 
 Typically epidemiologist have studied perioods of time. Here, researchers looked ar a longer period: 1989-2006.  They found that over time the mexican infrant mortality paradox began to resolve. And infants born to mexican born mothers no longer had an advantage.  
 
 ![Mexican Paradox Graph](img/mexParaChartDip.png)
 
-#Theories
+#Why?
 
-Why? The researchers speculat that this may involve changes in sociocultural norms or changes in the type of people that are immigrating.
+The researchers speculat that this may involve changes in sociocultural norms or changes in the type of people that are immigrating.
 
 #Citation
 
