--- a/mexPara.html
+++ b/mexPara.html
@@ -234,24 +234,19 @@ The first explanation is different social and cultural norms among Mexicans rela
 ![Mexican Paradox Graph](img/mexParaOne.jpg)
 
 
-#Explanation 2: Healthier Immigrants
-```
-- center: [26.72, -106.66]
-- zoom: 5
-```
-
 The second explanation is that the difference is that people who coose to immigrate to the us and stay in the us may simply be healthier. This expalation is supported by data showing that other ethnic groups who are not Hispanic also seem to benefit from the Mexican Paradox.
+
 
 
 #Trends tell a different story
 
-Typically epidemiologist have studied perioods of time. Here, researchers looked ar a longer period: 1989-2006.  They found that over time the mexican infrant mortality paradox began to resolve. And infants born to mexican born mothers no longer had an advantage.  
+Typically epidemiologists have studied shorter perioods of time. Here, researchers looked at a longer period: 1989-2006. They found that over time the Mexican Infant Mortality Paradox began to resolve and infants born to mexican born mothers no longer had an advantage.  
 
 ![Mexican Paradox Graph](img/mexParaChartDip.png)
 
 #Why?
 
-The researchers speculat that this may involve changes in sociocultural norms or changes in the type of people that are immigrating.
+The researchers speculate that this may involve changes in sociocultural norms or changes in the type of people that are immigrating.
 
 #Citation
 
