--- a/gunDeaths.html
+++ b/gunDeaths.html
@@ -262,8 +262,8 @@ Efforts to identify state-specific best practices can contribute to changes in n
 
 # For More Information
 
-![Kalesan B, Vasan S, Mobily ME, et al. State specific, racial and ethnic heterogeneity in trends of
-firearm-related fatality rates in the USA from 2000 to 2010. BMJ Open 2014;4:e005628. doi:10.1136/bmjopen-2014-005628] (http://bmjopen.bmj.com/content/4/9/e005628.full)
+<a href="http://bmjopen.bmj.com/content/4/9/e005628.full">Kalesan B, Vasan S, Mobily ME, et al. State specific, racial and ethnic heterogeneity in trends of
+firearm-related fatality rates in the USA from 2000 to 2010. BMJ Open 2014;4:e005628. doi:10.1136/bmjopen-2014-005628</a>
 
 
 </script></body></html>
