--- a/gunDeaths.html
+++ b/gunDeaths.html
@@ -208,7 +208,6 @@ Hawaii had the lowest number of deaths at 3 (key number) per 100,000. Louisana h
 
 
 #Comparing to National Average
-
 ![Higher than Average](img/aboveaverage.png)
 
 30 (key number) states and Washington DC had higher rates than the national average.
@@ -216,44 +215,37 @@ Hawaii had the lowest number of deaths at 3 (key number) per 100,000. Louisana h
 
 
 #Gun Deaths among African Americans
-
 ![African Americans](img/blacks.png)
 
 African Americans were almost twice as likely to die by gun than non-Hispanic Whites. (19 vs 9 per 100,000) (key numbers)
 
 
 #Gun Deaths among Hispanics
-
 ![Hispanics](img/hispanics.png)
 
 Hispanics were less likely to die by gun than non-Hispanic Whites (7 vs 10 per 100,000) (key numbers)
 
 # Increases in Gun Deaths
-
 ![Increases](img/increases.png)
 
 Florida and Massachusetts had increases in gun deaths between 2000-2010. 
 
 #Decreases in Gun Deaths
-
 ![Decreases](img/decreases.png)
 
 Seven states and Washington DC had decreases in gun deaths between 2000-2010.
 
 #Homicides
-
 ![Homicides](img/homicides.png)
 
 The rate of homicide remained steady at 4 per 100,000 over this time period.
 
 # Suicides
-
 ![Suicides](img/suicides.png)
 
 The rate of suicides remained steady at 6 per 100,000 over this time period.
 
 # Conclusions
-
 While the rate of national firearm deaths remained stable during 2000– 2010, there was significant variation at the state level.
 
 Gun related deaths were twice as high in African Americans than Caucasians but decreased among Hispanics.
@@ -262,8 +254,8 @@ Efforts to identify state-specific best practices can contribute to changes in n
 
 # For More Information
 
-<a href="http://bmjopen.bmj.com/content/4/9/e005628.full"> Kalesan B, Vasan S, Mobily ME, et al. State specific, racial and ethnic heterogeneity in trends of
-firearm-related fatality rates in the USA from 2000 to 2010. BMJ Open 2014;4:e005628. doi:10.1136/bmjopen-2014-005628 </a>
+[Kalesan B, Vasan S, Mobily ME, et al. State specific, racial and ethnic heterogeneity in trends of
+firearm-related fatality rates in the USA from 2000 to 2010. BMJ Open 2014;4:e005628. doi:10.1136/bmjopen-2014-005628](http://bmjopen.bmj.com/content/4/9/e005628.full)
 
 
 </script></body></html>
