--- a/mexPara.html
+++ b/mexPara.html
@@ -211,9 +211,6 @@ The study found that foreign born Mexicans in the US have lower rates of infant 
 ```
 - center: [26.72, -106.66]
 - zoom: 5
-L.marker([26.72, -103.66]).actions.addRemove(S.map)
-L.marker([29.72, -103.66]).actions.addRemove(S.map)
-//L.popup(className = "popInfo").setLatLng([27.72, -103.66]).setContent("I am a popup.").actions.addRemove(S.map)
 ```
 
 
@@ -234,13 +231,13 @@ The first explanation is different social and cultural norms among Mexicans rela
 ![Mexican Paradox Graph](img/mexParaOne.jpg)
 
 
-The second explanation is that the difference is that people who coose to immigrate to the us and stay in the us may simply be healthier. This expalation is supported by data showing that other ethnic groups who are not Hispanic also seem to benefit from the Mexican Paradox.
+The second explanation is that people who choose to immigrate to and stay in the US may simply be healthier. This explanation is supported by data showing other ethnic groups who are not Hispanic also seem to benefit from the Mexican Paradox.
 
 
 
-#Trends tell a different story
+#Trends tell a Different Story
 
-Typically epidemiologists have studied shorter perioods of time. Here, researchers looked at a longer period: 1989-2006. They found that over time the Mexican Infant Mortality Paradox began to resolve and infants born to mexican born mothers no longer had an advantage.  
+Typically epidemiologists have studied shorter perioods of time. Here, researchers looked at a longer period: 1989-2006. They found that over time the Mexican Infant Mortality Paradox began to resolve and infants born to Mexican born mothers no longer had an advantage.  
 
 ![Mexican Paradox Graph](img/mexParaChartDip.png)
 
@@ -248,8 +245,8 @@ Typically epidemiologists have studied shorter perioods of time. Here, researche
 
 The researchers speculate that this may involve changes in sociocultural norms or changes in the type of people that are immigrating.
 
-#Citation
+#For More Information
 
-[links](http://www.google.com)
+[El-Sayed AM, Paczkowski MM, March D, Galea S. Trends in the Mexican infant mortality paradox over the past two decades. Ann Epidemiol. 2014 Nov;24(11):831-6. doi: 10.1016/j.annepidem.2014.09.005. Epub 2014 Sep 18.](http://dx.doi.org/10.1016/j.annepidem.2014.09.005)
 
 </script></body></html>
