--- a/mexPara.html
+++ b/mexPara.html
@@ -195,7 +195,7 @@
 - zoom: 4
 ```
 
-Despite being poor on average, babies born to Mexican mothers are less likely to die in their first year of life than those to non-hispanic mothers. This paradox has long puzzled population health scientists. But that all migh be changing. 
+Despite being poor on average, babies born to Mexican mothers are less likely to die in their first year of life than those to non-hispanic mothers. This paradox has long puzzled population health scientists. But that all might be changing. 
 
 #Births in Michigan, 1989-1997
 ```
@@ -204,7 +204,6 @@ Despite being poor on average, babies born to Mexican mothers are less likely to
 ```
 During this 8-year period, Meixcan-born mothers in the US had lower rates of infant mortality than US-born Mexican mothers and non-hispanic White mothers. This means that their babies were less likely to die before the age of one. 
 
-The study found that foreign born Mexicans in the US have lower rates of infant mortality than non-Hispanic whites. This means that Mexican mothers in the US, particularly those born in Mexico,have fewer babies die than non-Hispanic mothers.
 ![Mexican Paradox Graph](img/mexParaChart.png)
 
 #Against Intuition
@@ -214,11 +213,8 @@ The study found that foreign born Mexicans in the US have lower rates of infant 
 ```
 
 
-This is surprising because Hispanic groups in the US usually have higher poverty, lower income and less education than non-Hispanic whites and these factors often cause worse health outcomes. But here they don’t.
+This is surprising because Hispanic groups in the US usually have higher poverty, lower income and less education than non-Hispanic Whites and these factors often cause worse health outcomes. But here they don’t.
 ![Mexican Paradox Graph](img/mexParaChartDiff.png)
-
-
-There are 2 principal explanations for why this might be.
 
 
 #Two possible explanations
@@ -226,7 +222,7 @@ There are 2 principal explanations for why this might be.
 - center: [26.72, -106.66]
 - zoom: 5```
 
-The first explanation is different social and cultural norms among Mexicans relative to non-Hispanic whites. These include the norm of spending more time together, and feeling obligated among family and friends to do so, meaning that people are more likely to offer help before it is asked for. Additionally, things like diet, exercise and childcare norms may neutralize the negative effects of poverty. This theory is supported by the observation that the paradox is stronger in immigrants who are more likely to adhere to these norms and who have spent a shorter time in the US.
+The first explanation is different social and cultural norms among Mexicans relative to non-Hispanic Whites. These include the norm of spending more time together, and feeling obligated among family and friends to do so, meaning that people are more likely to offer help before it is asked for. Additionally, things like diet, exercise and childcare norms may neutralize the negative effects of poverty. This theory is supported by the observation that the paradox is stronger in immigrants who are more likely to adhere to these norms and who have spent a shorter time in the US.
 
 ![Mexican Paradox Graph](img/mexParaOne.jpg)
 
