Changed images and charts

--- a/mexPara.html
+++ b/mexPara.html
@@ -204,9 +204,9 @@ Despite being poor on average, babies born to Mexican mothers are less likely to
 - center: [44.48, -84.81]
 - zoom: 5
 ```
-During this 8-year period, Meixcan-born mothers in the US had lower rates of infant mortality than US-born Mexican mothers and non-hispanic White mothers. This means that their babies were less likely to die before the age of one. 
+During this 8-year period, Mexican-born mothers in the US had lower rates of infant mortality than US-born Mexican mothers and non-hispanic White mothers. This means that their babies were less likely to die before the age of one. 
 
-![Mexican Paradox Graph](img/mexParaChart.png)
+![Mexican Paradox Graph](img/mexParaCharthalf.png)
 
 #Against Intuition
 ```
@@ -216,7 +216,7 @@ During this 8-year period, Meixcan-born mothers in the US had lower rates of inf
 
 
 This is surprising because Hispanic groups in the US usually have higher poverty, lower income and less education than non-Hispanic Whites and these factors often cause worse health outcomes. But here they don’t.
-![Mexican Paradox Graph](img/mexParaChartDiff.png)
+![Mexican Paradox Graph](img/mexParaChartDiffv2.png)
 
 
 #Two possible explanations
@@ -238,7 +238,7 @@ The second explanation is that people who choose to immigrate to and stay in the
 
 Typically epidemiologists have studied shorter perioods of time. Here, researchers looked at a longer period: 1989-2006. They found that over time the Mexican Infant Mortality Paradox began to resolve and infants born to Mexican born mothers no longer had an advantage.  
 
-![Mexican Paradox Graph](img/mexParaChartDip.png)
+![Mexican Paradox Graph](img/mexParaChartDipv2.png)
 
 #Why?
 
