Highlighted numbers by bolding them.

--- a/gunDeaths.html
+++ b/gunDeaths.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" href="http://cartodb.github.io/odyssey.js/sandbox/favicon.png"> -->
 
   <link rel="stylesheet" href="http://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/themes/css/cartodb.css">
-  <link rel="stylesheet" href="css/scroll.css">
+  <link rel="stylesheet" href="css/gunscroll.css">
   <script src="http://cartodb.github.io/odyssey.js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
@@ -198,32 +198,33 @@ Between 2000 and 2010, 335,609 people died from gun related deaths in the United
 
 ![National Avg Graph](img/nationaloverall.png)
 
-10 (key number) people out of every 100,000 in the US died by a gun.
+**10** people out of every 100,000 in the US died by a gun.
 
 #Highs and Lows
 
 ![Lowest Highest](img/highlow.png)
 
-Hawaii had the lowest number of deaths at 3 (key number) per 100,000. Louisana had the highest number of deaths at 19 (key number) per 100,000. 
+Hawaii had the lowest number of deaths at **3** per 100,000. Louisana had the highest number of deaths at **19** per 100,000. 
 
 
 #Comparing to National Average
 ![Higher than Average](img/aboveaverage.png)
 
-30 (key number) states and Washington DC had higher rates than the national average.
+**30** states and Washington DC had higher rates than the national average.
 
 
 
 #Gun Deaths among African Americans
 ![African Americans](img/blacks.png)
 
-African Americans were almost twice as likely to die by gun than non-Hispanic Whites. (19 vs 9 per 100,000) (key numbers)
+African Americans were almost twice as likely to die by gun than non-Hispanic Whites. **19 vs 9 per 100,000** (key numbers)
 
 
 #Gun Deaths among Hispanics
 ![Hispanics](img/hispanics.png)
 
-Hispanics were less likely to die by gun than non-Hispanic Whites (7 vs 10 per 100,000) (key numbers)
+Hispanics were less likely to die by gun than non-Hispanic Whites 
+**7 vs 10 per 100,000** 
 
 # Increases in Gun Deaths
 ![Increases](img/increases.png)
@@ -238,12 +239,12 @@ Seven states and Washington DC had decreases in gun deaths between 2000-2010.
 #Homicides
 ![Homicides](img/homicides.png)
 
-The rate of homicide remained steady at 4 per 100,000 over this time period.
+The rate of homicide remained steady at **4** per 100,000 over this time period.
 
 # Suicides
 ![Suicides](img/suicides.png)
 
-The rate of suicides remained steady at 6 per 100,000 over this time period.
+The rate of suicides remained steady at **6** per 100,000 over this time period.
 
 # Conclusions
 While the rate of national firearm deaths remained stable during 2000– 2010, there was significant variation at the state level.
