--- a/gunDeaths.html
+++ b/gunDeaths.html
@@ -217,7 +217,7 @@ Hawaii had the lowest number of deaths at **3** per 100,000. Louisana had the hi
 #Gun Deaths among African Americans
 ![African Americans](img/blacks.png)
 
-African Americans were almost twice as likely to die by gun than non-Hispanic Whites. **19 vs 9 per 100,000** (key numbers)
+African Americans were almost twice as likely to die by gun than non-Hispanic Whites. **19 vs 9 per 100,000** 
 
 
 #Gun Deaths among Hispanics
