--- a/gunDeaths.html
+++ b/gunDeaths.html
@@ -204,7 +204,7 @@ Between 2000 and 2010, 335,609 people died from gun related deaths in the United
 
 ![Lowest Highest](img/highlow.png)
 
-Hawaii had the lowest number of deaths at **3** per 100,000. Louisana had the highest number of deaths at **19** per 100,000. 
+Hawaii had the lowest number of deaths at **3 per 100,000**. Louisana had the highest number of deaths at **19 per 100,000**. 
 
 
 #Comparing to National Average
@@ -239,12 +239,12 @@ Seven states and Washington DC had decreases in gun deaths between 2000-2010.
 #Homicides
 ![Homicides](img/homicides.png)
 
-The rate of homicide remained steady at **4** per 100,000 over this time period.
+The rate of homicide remained steady at **4 per 100,000** over this time period.
 
 # Suicides
 ![Suicides](img/suicides.png)
 
-The rate of suicides remained steady at **6** per 100,000 over this time period.
+The rate of suicides remained steady at **6 per 100,000** over this time period.
 
 # Conclusions
 While the rate of national firearm deaths remained stable during 2000– 2010, there was significant variation at the state level.
